# otel-aks-observability

./: .gitignore  README.en.md  README.md
dashboard/dev/: 15136_appinsights_overview.dev.json
dashboard/sample/: 15136_rev8.json  24340_rev1.json
dev/: .env.example  README.dev.en.md  README.dev.md  certmgr-test.yaml  deploy-apps.ps1  deploy-apps.sh  ingress-security-template.dev.yaml  inst-crd-dotnet.yaml  inst-crd-python.yaml  myvalues.yaml  otel-collector-k8sattributes-rbac.yaml  otel-collector-service.dev.yaml  otel-gateway-myvalues.yaml  otel-ui-otlp-ingress.yaml  otel-ui-otlp-service.yaml  otel-ui.yaml  otelapidemo-cpp.yaml  otelapidemo-dotnet.yaml  otelapidemo-ingress.yaml  otelapidemo-python.yaml  otle-gateway-myvalues.yaml  release-notes.dev.en.md  release-notes.dev.md
otel-ui/: .env.example  Dockerfile  README.md  build-push-acr.ps1  build-push-acr.sh  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
otel-ui/src/: App.css  App.jsx  App.tsx  index.css  main.jsx  main.tsx  telemetry.config.js  telemetry.config.ts  telemetry.js  telemetry.ts  vite-env.d.ts
otelapicpp/: .dockerignore  CMakeLists.txt  Dockerfile  Dockerfile.deps  README.md  build-push-acr.ps1  build-push-acr.sh  vcpkg.json
otelapicpp/include/otelapicpp/: api.h  config.h  exceptions.h  telemetry.h  weather.h
otelapicpp/src/: api.cpp  config.cpp  main.cpp  telemetry.cpp  weather.cpp
otelapidemo/: otelapidemo.slnx
otelapidemo/otelapidemo/: Dockerfile  Program.cs  WeatherForecast.cs  build-push-acr.ps1  build-push-acr.sh  otelapidemo.csproj  otelapidemo.http
otelapidemo/otelapidemo/Controllers/: WeatherForecastController.cs
otelapidemo/otelapidemo/Exceptions/: CustomTestException.cs
otelapidemo/otelapidemo/Properties/: launchSettings.json
otelapidemo/otelapidemo/Properties/PublishProfiles/: acr.pubxml.example  qiqiacr.pubxml
otelapipy/: .dockerignore  README.md  build-push-acr.ps1  build-push-acr.sh
otelapipy/app/: main.py
prod/: README.prod.en.md  README.prod.md  agent-values.prod.yaml  alerts-kql.prod.md  appinsights-dashboard.prod.en.md  appinsights-dashboard.prod.md  appinsights-dashboard.workbook.json  collector-tls.prod.yaml  gateway-values.prod.yaml  ingress-nginx-values.prod.yaml  inst-crd-dotnet.prod.yaml  inst-crd-python.prod.yaml  networkpolicy.prod.yaml  otel-agent-rbac.prod.yaml  otel-agent-service.prod.yaml  otel-gateway-headless.prod.yaml  otelapidemo-dotnet.yaml  otelapidemo-ingress.prod.yaml  otelapidemo-python.yaml  version-baseline.current.md
prod/apps/: .env.example  deploy-apps.ps1  deploy-apps.sh  ingress-security-template.prod.yaml  kustomization.yaml  otel-ui-ingress.prod.yaml  otel-ui-otlp-service.yaml  otel-ui.yaml  otelapidemo-cpp.yaml  otelapidemo-dotnet.yaml  otelapidemo-ingress.prod.yaml  otelapidemo-python.yaml
